# sunnyweb

./: .gitignore  Cargo.toml  README.md
aok/: Cargo.toml  LICENSE  README.md
aok/aok/: Cargo.toml
aok/aok-bin/: Cargo.toml
aok/aok-bin/src/: main.rs
aok/aok-macros/: Cargo.toml
aok/aok-macros/src/: attributes.rs  info.rs  lib.rs  relation.rs  types.rs
aok/aok-macros/src/util/: define_schema.rs  has_schema.rs  mod.rs  relations.rs  table_columns.rs  table_info.rs  unique_identifier.rs  write_bulk_array_to_args.rs  write_to_args.rs
aok/aok-macros/src/util/impl_struct/: fn_all.rs  fn_find_by_id.rs  fn_from_raw_sql.rs  fn_new.rs  fn_select.rs  fn_where_col.rs  mod.rs
aok/aok/src/: errors.rs  example_objects.rs  lib.rs  state.rs
aok/aok/src/check/: issue.rs  mod.rs
aok/aok/src/connection/: any.rs  mod.rs
aok/aok/src/query/: helpers.rs
aok/aok/src/query/delete/: mod.rs
aok/aok/src/query/insert/: single.rs
aok/aok/src/query/update/: single.rs
lychee/: Cargo.toml  Makefile  build.rs
lychee/configs/: app.toml
lychee/embedfiles/: Cargo.template.bak  app.toml.template
lychee/package/: Readme.md
lychee/package/resource/: Cargo.toml.template  err.rs.template  main_lib.rs.template  run.sh
lychee/package/resource/locales/: zh-CN.toml
lychee/package/resource/src/controller/: navigation.rs  user.rs
lychee/package/resource/src/model/: mod.rs  navigation.rs  users.rs
lychee/package/resource/src/utils/: message.rs  mod.rs  template.rs
lychee/package/resource/static/css/: collection.css  component.css  default.css  layui.css  main.css
lychee/package/resource/static/css/Date/css/: iconfont.css
lychee/package/resource/static/css/Iconfont/: iconfont.js
lychee/package/resource/static/css/auth/: ax.css
lychee/package/resource/static/css/department/: form_old.css  list.css
lychee/package/resource/static/css/editor/: form.css
lychee/package/resource/static/css/robotdance/: form.css
lychee/package/resource/static/css/select/css/: select-mania.css
lychee/package/resource/static/css/videos/: videos.css
lychee/package/resource/static/js/: jquery.validate.js  main.js
lychee/package/resource/templates/auth/: login.html  test.html
lychee/package/resource/templates/index/: index.html
lychee/package/resource/templates/navigation/: add.html  edit.html
lychee/package/resource/templates/user/: form.html  list.html
lychee/resource/: Cargo.template  Cargo.toml.template  Dockerfile.template  app.toml.template  bcrypt.sh  config.rs.template  main.rs.template  main.template  main_lib.rs.template  router.rs.template
lychee/resource/locales/: en-US.toml
lychee/resource/src/: user.rs
lychee/resource/src/controller/: login.rs  mod.rs  navigation.rs  user.rs
lychee/resource/src/model/: users.rs
lychee/resource/src/utils/: message.rs  password.rs
lychee/resource/static/css/: app.a7732c9e178a3b07e3de8a3db6cda678.css.map  component-chosen.css  mln.colselect.css  patrol.css  public_multi.css  tab.css
lychee/resource/static/css/auth/: main.css
lychee/resource/static/css/department/: list_old.css
lychee/resource/static/css/ocr/: elist_old.css
lychee/resource/static/css/videos/video/: video.js
lychee/resource/static/js/form/: form.js
lychee/resource/templates/auth/: login.html
lychee/resource/templates/index/: index.html
lychee/resource/templates/navigation/: list.html
lychee/resource/templates/user/: form.html  list.html
lychee/src/: lib.rs  main.rs
lychee/src/lycheecli/: config.rs  menu.rs  mod.rs  utils.rs
lychee/src/lycheecli/db/: sqlite.rs
lychee/src/resources/: embed_resources.rs  mod.rs
lychee/sunny-web/: Cargo.toml  README.md
lychee/test/: Cargo.toml  README.md
lychee/test/src/: lib.rs  main.rs
sunny-derive-trait/src/: lib.rs
sunny-derive-trait/sunny-derive/src/: lib.rs
webhotel/: .env  Cargo.toml  README.md  webhotel.toml
webhotel/configs/: webhotel.toml
webhotel/configs/locales/: en-US.toml  zh-CN.toml
webhotel/src/: config.rs  err.rs  lib.rs  main.rs  router.rs
webhotel/src/controller/: index.rs  login.rs  mod.rs  user.rs
webhotel/src/model/: mod.rs  navigation.rs  user.rs  users.rs
webhotel/src/utils/: message.rs  mod.rs
webhotel/static/css/: app.a7732c9e178a3b07e3de8a3db6cda678.css  category-menu.css  jquery.simple.tree.css  public_blue.css  public_blue_form.css  public_skyBlue.css
webhotel/static/css/Date/css/: datepicker.css
webhotel/static/css/Iconfont/: demo_index.html  iconfont.css  iconfont.eot  iconfont.json
webhotel/static/css/index/: login.css
webhotel/static/css/robotaction/: form.css
webhotel/static/css/robotshow/: form.css
webhotel/static/css/scene/: scene.css
webhotel/static/css/select/js/: select-mania.js
webhotel/static/css/util/: search_old.css
webhotel/static/css/videos/video/: video-ie8.js
webhotel/static/js/ValidateValue/: ValidateValue.js
webhotel/templates/auth/: login.html
webhotel/templates/common/: message.html
webhotel/templates/editor/: form.html
webhotel/templates/index/: index.html
webhotel/templates/user/: list.html
