[package]
name = "lychee"
version = "0.1.0"
authors = ["jinheking@163.com"]
edition = "2021"

[dependencies]
clap = {version ="4.5" ,features = ["derive"]}
config = "0.14.1"
lazy_static = "1.5.0"
serde = {version="1.0",features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

