[package]
name = "lychee"
version = "0.1.5"
authors = ["jinheking@163.com"]
edition = "2024"

[dependencies]
anyhow = "1.0.93"

clap = {version ="4.5" ,features = ["derive"]}
config = "0.14.1"
git2 = "0.19.0"
lazy_static = "1.5.0"
rust-embed = "8.5.0"
serde = {version="1.0",features = ["derive"] }
sqlx = {version ="0.8.6", features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = "1.45.1"
rust-argon2 = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
[build-dependencies]
chrono = "0.4"
# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"  # 64位