[package]
name = "webhotel"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "webhotel is a web framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14"
async-trait = "0.1.88"
axum = "0.8"
captcha-rs = "0.2.11"
# axum-extra = { version = "0.4.2", features = ["spa"] }
config = "0.15"
dotenv = "0.15"
lazy_static = "1.5.0"
serde = { version="1", features = ["derive"] }
serde_json = "1"
tera = "1.20.0"
tokio = { version = "1.25", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower-sessions = {version="0.14" } 
tower-sessions-redis-store = "0.16.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "runtime-tokio-native-tls", "postgres"] }
sunny-derive-trait = { path = "../sunny-derive-trait" }
sunny-derive = { path = "../sunny-derive-trait/sunny-derive" }
redis = { version = "0.32.2", features = ["tokio-comp", "cluster", "json"] }
rust-argon2 = "2.1.0"

