[package]
name = "aok-bin"
version = "0.1.0"
edition = "2021"
default-run = "aok-bin"
description = "Aok is a simple, fast, and secure web framework for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aok = { path = "../aok", version = '^0.1', features=["postgres", "mssql", "mysql", "sqlite", "detect"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls",  "macros"] }
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"] }