[package]
name = "aok"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.1.8"
edition = "2021"
license = "BSD-3-Clause"
categories = ["Database interfaces", "database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
description = "An async ORM for (postgres, mssql, mysql, sqlite)"

[dependencies]
sqlx = { version = "^0.6", features = [ "macros"] }
aok-macros = { path="../aok-macros", version = "^0.1" }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
colored = { version="2", optional = true }

[features]
"default" = []
"detect" = []
"check" = ["detect", "dep:colored"]
"example_objects" = []
"postgres" = ["sqlx/postgres", "aok-macros/postgres"]
"mysql" = ["sqlx/mysql", "aok-macros/mysql"]
"mssql" = ["sqlx/mssql", "aok-macros/mssql"]
"sqlite" = ["sqlx/sqlite", "aok-macros/sqlite"]


[profile.dev.package.sqlx-macros]
opt-level = 3


[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls",  "macros"] }
aok = { path="./", features=["postgres", "mysql", "mssql", "sqlite", "detect", "check", "example_objects"] }


