[package]
name = "sunny-web"
version = "0.1.0"
authors = "[jinheking@163.com]"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

serde = {version="1.0",features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }