[package]
name = "test"
version = "0.1.0"
authors = ["jinheking@163.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
config = "0.14"
lazy_static = "1.5.0"
serde = {version="1.0",features = ["derive"] }
tokio={ version="1", features=["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }